--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    body
+    <main>
+        <div class="main-left">
+            <img src="public/img/empty-iphone-2.png" alt="empty-iphone">
+        </div>
+        <div class="main-right">
+        </div>
+    </main>
+    <footer></footer>
 </body>
 
 </html>
