Add base login html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,61 @@
             <img src="public/img/empty-iphone-2.png" alt="empty-iphone">
         </div>
         <div class="main-right">
+            <div class="login">
+                <img class="login-logo" src="public/img/logo.png" alt="logo">
+                <div class="login-form">
+                    <form>
+                        <input type="text" placeholder="Phone number, username, or email" value="" name="" id="" />
+                        <input type="password" placeholder="Password" value="" name="" id="" />
+                        <input type="submit" value="Log In" name="" id="" />
+                    </form>
+                </div>
+                <fieldset class="login-facebook">
+                    <legend>OR</legend>
+                    <div class="login-facebook__button">
+                        <img src="public/img/facebook-mini-logo.jpg" alt="facebook-mini-logo">
+                        <a>Log in with Facebook</a>
+                    </div>
+                    <a class="login-facebook__password">Forgot password?</a>
+                </fieldset>
+            </div>
+            <div class="sign">
+                <p>Don't have an account? <a>Sing up</a></p>
+            </div>
+            <div class="download">
+                <p>Dowload the app</p>
+                <img class="download-app" src="public/img/download-app-store.png" alt="download-app-store">
+                <img class="download-play" src="public/img/download-play-store.png" alt="download-play-store">
+            </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-first">
+            <a>Information</a>
+            <a>Blog</a>
+            <a>Jobs</a>
+            <a>Help</a>
+            <a>API</a>
+            <a>Privacy</a>
+            <a>Conditions</a>
+            <a>Accounts</a>
+            <a>Hashtags</a>
+            <a>Ubications</a>
+        </div>
+        <div class="footer-second">
+            <a>Beauty</a>
+            <a>Dance and Events</a>
+            <a>Fitness</a>
+            <a>Food and drinks</a>
+            <a>Home</a>
+            <a>Music</a>
+            <a>Viusal Arts</a>
+        </div>
+        <div class="footer-third">
+            <a>English</a>
+            <a>2021 Marcel Arie</a>
+        </div>
+    </footer>
 </body>
 
 </html>
