Add base css to login

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <form>
                         <input type="text" placeholder="Phone number, username, or email" value="" name="" id="" />
                         <input type="password" placeholder="Password" value="" name="" id="" />
-                        <input type="submit" value="Log In" name="" id="" />
+                        <button type="submit" value="Log In" name="" id="">Log In</button>
                     </form>
                 </div>
                 <fieldset class="login-facebook">
                     <legend>OR</legend>
                     <div class="login-facebook__button">
-                        <img src="public/img/facebook-mini-logo.jpg" alt="facebook-mini-logo">
+                        <!-- <img src="public/img/facebook-mini-logo.jpg" alt="facebook-mini-logo"> -->
                         <a>Log in with Facebook</a>
                     </div>
                     <a class="login-facebook__password">Forgot password?</a>
@@ -37,8 +37,8 @@
             </div>
             <div class="download">
                 <p>Dowload the app</p>
-                <img class="download-app" src="public/img/download-app-store.png" alt="download-app-store">
-                <img class="download-play" src="public/img/download-play-store.png" alt="download-play-store">
+                <!-- <img class="download-app" src="public/img/download-app-store.png" alt="download-app-store"> -->
+                <!-- <img class="download-play" src="public/img/download-play-store.png" alt="download-play-store"> -->
             </div>
         </div>
     </main>
