Finished CSS login

--- a/index.html
+++ b/index.html
@@ -26,25 +26,29 @@
                 <fieldset class="login-facebook">
                     <legend>OR</legend>
                     <div class="login-facebook__button">
-                        <!-- <img src="public/img/facebook-mini-logo.jpg" alt="facebook-mini-logo"> -->
+                        <img src="public/img/facebook-mini-logo.jpg" alt="facebook-mini-logo">
                         <a>Log in with Facebook</a>
                     </div>
-                    <a class="login-facebook__password">Forgot password?</a>
+                    <div class="login-facebook__password">
+                        <a>Forgot password?</a>
+                    </div>
                 </fieldset>
             </div>
-            <div class="sign">
+            <div class="sing">
                 <p>Don't have an account? <a>Sing up</a></p>
             </div>
             <div class="download">
-                <p>Dowload the app</p>
-                <!-- <img class="download-app" src="public/img/download-app-store.png" alt="download-app-store"> -->
-                <!-- <img class="download-play" src="public/img/download-play-store.png" alt="download-play-store"> -->
+                <p>Get the app.</p>
+                <div>
+                    <img class="download-app" src="public/img/download-app-store.png" alt="download-app-store">
+                    <img class="download-play" src="public/img/download-play-store.png" alt="download-play-store">
+                </div>
             </div>
         </div>
     </main>
     <footer>
         <div class="footer-first">
-            <a>Information</a>
+            <a>About</a>
             <a>Blog</a>
             <a>Jobs</a>
             <a>Help</a>
@@ -57,16 +61,16 @@
         </div>
         <div class="footer-second">
             <a>Beauty</a>
-            <a>Dance and Events</a>
+            <a>Dance & Events</a>
             <a>Fitness</a>
-            <a>Food and drinks</a>
+            <a>Food & drinks</a>
             <a>Home</a>
             <a>Music</a>
             <a>Viusal Arts</a>
         </div>
         <div class="footer-third">
-            <a>English</a>
-            <a>2021 Marcel Arie</a>
+            <a>English ▼</a>
+            <a>© 2021 Marcel Arie</a>
         </div>
     </footer>
 </body>
