--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                     <legend>OR</legend>
                     <div class="login-facebook__button">
                         <img src="public/img/facebook-mini-logo.jpg" alt="facebook-mini-logo">
-                        <a>Log in with Facebook</a>
+                        <a href="#0">Log in with Facebook</a>
                     </div>
                     <div class="login-facebook__password">
-                        <a>Forgot password?</a>
+                        <a href="#0">Forgot password?</a>
                     </div>
                 </fieldset>
             </div>
             <div class="sing">
-                <p>Don't have an account? <a>Sing up</a></p>
+                <p>Don't have an account? <a href="#0">Sing up</a></p>
             </div>
             <div class="download">
                 <p>Get the app.</p>
@@ -48,30 +48,31 @@
     </main>
     <footer>
         <div class="footer-first">
-            <a>About</a>
-            <a>Blog</a>
-            <a>Jobs</a>
-            <a>Help</a>
-            <a>API</a>
-            <a>Privacy</a>
-            <a>Conditions</a>
-            <a>Accounts</a>
-            <a>Hashtags</a>
-            <a>Ubications</a>
+            <a href="#0">About</a>
+            <a href="#0">Blog</a>
+            <a href="#0">Jobs</a>
+            <a href="#0">Help</a>
+            <a href="#0">API</a>
+            <a href="#0">Privacy</a>
+            <a href="#0">Conditions</a>
+            <a href="#0">Accounts</a>
+            <a href="#0">Hashtags</a>
+            <a href="#0">Locations</a>
         </div>
         <div class="footer-second">
-            <a>Beauty</a>
-            <a>Dance & Events</a>
-            <a>Fitness</a>
-            <a>Food & drinks</a>
-            <a>Home</a>
-            <a>Music</a>
-            <a>Viusal Arts</a>
+            <a href="#0">Beauty</a>
+            <a href="#0">Dance & Events</a>
+            <a href="#0">Fitness</a>
+            <a href="#0">Food & drinks</a>
+            <a href="#0">Home</a>
+            <a href="#0">Music</a>
+            <a href="#0">Viusal Arts</a>
         </div>
         <div class="footer-third">
-            <a>English ▼</a>
-            <a>© 2021 Marcel Arie</a>
+            <a href="#0">English ▼</a>
+            <a href="#0">© 2021 Marcel Arie</a>
         </div>
+
     </footer>
 </body>
 
