Add link to home on submit

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <div class="login">
                 <img class="login-logo" src="public/img/logo.png" alt="logo">
                 <div class="login-form">
-                    <form>
-                        <input type="text" placeholder="Phone number, username, or email" value="" name="" id="" />
-                        <input type="password" placeholder="Password" value="" name="" id="" />
-                        <button type="submit" value="Log In" name="" id="">Log In</button>
+                    <form action="home.html">
+                        <input type="text" placeholder="Phone number, username, or email" value="" name="" id=""
+                            required />
+                        <input type="password" placeholder="Password" value="" name="" id="" required />
+                        <button type="submit" href="#0" value="Log In" name="" id="">Log In</button>
                     </form>
                 </div>
                 <fieldset class="login-facebook">
